--- a/src/css/ProductCard.css
+++ b/src/css/ProductCard.css
@@ -2,24 +2,33 @@
 .product-card {
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0 0px 4px rgb(116, 116, 116);
+  box-shadow: 0 0px 4px black;
   overflow: hidden;
-  width: 350px;
+  width: 255px;
   display: flex;
   flex-direction: column; /* Stack children vertically */
-  height: 500px; /* Fixed height for all cards */
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  height: 400px; /* Fixed height for all cards */
+  /* transition: transform 0.3s ease, box-shadow 0.3s ease; */
 }
 
-.product-card:hover {
+/* .product-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
+} */
 
-.product-image {
+.image-div {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
+  height: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+.product-image {
+  padding: 15px;
+  height: 150px;
+  height: auto;
+  object-fit: contain;
+  object-position: center;
+  margin: 0 auto;
 }
 
 .product-details {
@@ -27,18 +36,22 @@
   flex: 1; /* Takes up remaining space */
   display: flex;
   flex-direction: column;
- border-top:1px solid gray;
 }
 
 .product-title {
-  font-size: 18px;
+  font-size: 16px;
+  line-height:1.5;
+  max-height:3em;
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
   font-weight: 600;
   color: #1e293b; /* Subheading color */
   margin-bottom: 10px;
 }
 
 .product-price {
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 500;
   color: #ff6f61; /* Accent color for price */
   margin-bottom: 10px;
@@ -48,7 +61,6 @@
   color: #1e293b;
   font-size: 14px;
   display: inline-block;
-  
 }
 
 .product-ratings {
@@ -70,7 +82,7 @@
 }
 
 .product-category {
-  font-size: 12px;
+  font-size: 10px;
   width: fit-content;
   margin-bottom: 15px;
   padding: 3px 10px 4px 10px;
